cmake_minimum_required(VERSION 3.9)
project(book_cpp_the_examples_and_tasks_part_2)

set(CMAKE_CXX_STANDARD 11)

add_executable(book_cpp_the_examples_and_tasks_part_2
        README.md 1/1.1/main.cpp 1/1.2/main.cpp 1/1.3/main.cpp 1/1.4/main.cpp 1/1.5/main.cpp 1/1.6/main.cpp 1/1.7/main.cpp 1/1.8/main.cpp 1/1.9/main.cpp 1/1.10/main.cpp 1/1.11/main.cpp 1/1.12/main.cpp 1/1.13/main.cpp 1/1.14/main.cpp 1/1.15/main.cpp 1/1.16/main.cpp 1/1.17/main.cpp)
