cmake_minimum_required(VERSION 3.9)
project(book_cpp_the_examples_and_tasks_part_2)

set(CMAKE_CXX_STANDARD 11)

add_executable(book_cpp_the_examples_and_tasks_part_2
        1/1.1/main.cpp 1/1.2/main.cpp 1/1.3/main.cpp 1/1.4/main.cpp 1/1.5/main.cpp 1/1.6/main.cpp 1/1.7/main.cpp 1/1.8/main.cpp 1/1.9/main.cpp 1/1.10/main.cpp 1/1.11/main.cpp 1/1.12/main.cpp 1/1.13/main.cpp 1/1.14/main.cpp 1/1.15/main.cpp 1/1.16/main.cpp 1/1.17/main.cpp 1/1.18/main.cpp
        2/2.1/main.cpp 2/2.2/main.cpp 2/2.3/main.cpp 2/2.4/main.cpp 2/2.5/main.cpp 2/2.6/main.cpp 2/2.7/main.cpp 2/2.8/main.cpp 2/2.9/main.cpp 2/2.10/main.cpp 2/2.11/main.cpp 2/2.12/main.cpp 2/2.13/main.cpp 2/2.14/main.cpp 2/2.15/main.cpp 2/2.16/main.cpp 2/2.17/main.cpp 2/2.18/main.cpp 2/2.19/main.cpp 2/2.20/main.cpp 2/2.21/main.cpp
        3/3.1/main.cpp 3/3.2/main.cpp 3/3.3/main.cpp 3/3.4/main.cpp 3/3.5/main.cpp 3/3.6/main.cpp 3/3.7/main.cpp 3/3.8/main.cpp 3/3.9/main.cpp 3/3.10/main.cpp 3/3.11/main.cpp 3/3.12/main.cpp 3/3.13/main.cpp 3/3.14/main.cpp 3/3.15/main.cpp 3/3.16/main.cpp 3/3.17/main.cpp 3/3.18/main.cpp
        4/4.1/main.cpp 4/4.2/main.cpp 4/4.3/main.cpp 4/4.4/main.cpp 4/4.5/main.cpp 4/4.6/main.cpp 4/4.7/main.cpp 4/4.8/main.cpp 4/4.9/main.cpp 4/4.10/main.cpp 4/4.11/main.cpp 4/4.12/main.cpp 4/4.13/main.cpp 4/4.14/main.cpp 4/4.15/main.cpp 4/4.16/main.cpp 4/4.17/main.cpp 4/4.18/main.cpp 4/4.19/main.cpp 4/4.20/main.cpp 4/4.21/main.cpp 4/4.22/main.cpp 4/4.23/main.cpp 4/4.24/main.cpp 4/4.25/main.cpp 4/4.26/main.cpp 4/4.27/main.cpp 4/4.28/main.cpp 4/4.29/main.cpp 4/4.30/main.cpp 4/4.31/main.cpp 4/4.32/main.cpp 4/4.33/main.cpp
        5/5.1/main.cpp 5/5.2/main.cpp 5/5.3/main.cpp 5/5.4/main.cpp 5/5.5/main.cpp 5/5.6/main.cpp 5/5.7/main.cpp 5/5.8/main.cpp 5/5.9/main.cpp 5/5.10/main.cpp 5/5.11/main.cpp 5/5.12/main.cpp 5/5.13/main.cpp 5/5.14/main.cpp 5/5.15/main.cpp 5/5.16/main.cpp 5/5.17/main.cpp 5/5.18/main.cpp 5/5.19/main.cpp 5/5.20/main.cpp 5/5.21/main.cpp 6/6.1/main.cpp 6/6.2/main.cpp 6/6.3/main.cpp 6/6.4/main.cpp 6/6.5/main.cpp 6/6.6/main.cpp 6/6.7/main.cpp 6/6.8/main.cpp)
